# rasterbox

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: Assets.cpp  Assets.hpp  Color.cpp  Color.hpp  Effects.cpp  Effects.hpp  Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp
